[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-toolkit"
version = "0.1.0"
description = "Reusable portfolio optimisation wrappers (MVO, Black-Litterman, HRP) + examples."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "yfinance>=0.2",
  "PyPortfolioOpt>=1.5",
  "cvxpy>=1.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
